# BabelForge

./: .gitattributes  .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  justfile  pixi.toml
installer/: BabelForge.iss
skill/: SKILL.md
skill/agents/: openai.yaml
src/: app.rs  config.rs  engine.rs  error.rs  execution.rs  main.rs
src/commands/: check.rs  config.rs  get.rs  mod.rs  output.rs  replace.rs  retry.rs  stop.rs  submit.rs  system.rs  worker.rs
src/config/: mod.rs
src/storage/: mod.rs
