[package]
name = "bfx"
version = "0.1.0"
edition = "2024"
description = "BabelForge eXecutor command-line interface"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
fs4 = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
unicode-width = "0.2"
url = "2.5"
